--- a/Restaurant.css
+++ b/Restaurant.css
@@ -35,7 +35,9 @@ p, h4{
     border: solid 1px black; 
 }
 
-#footer-section{}
+#footer-section{
+
+}
 
 .socials{
     display: flex;
@@ -46,6 +48,8 @@ p, h4{
     height: 50%; 
     margin-bottom: 10px;
     margin-top: 10px;
+    justify-content: space-around;
+    font-size: x-large;
 }
 
 .insta, .tik, .face{
