--- a/Restaurant.css
+++ b/Restaurant.css
@@ -14,8 +14,8 @@
 #second-section{ 
     margin-top: 10px;
     margin-bottom: 10px;
-    border: solid 1px black;
     height: 500px;
+    box-shadow: 0px 0px 5px 5px #383737;
 }
 
 p, h4{
@@ -29,16 +29,19 @@ p, h4{
     display: flex;
     margin-top: 10px;
     justify-content: space-around;
+    
 }
 .one, .two, .three{
     width: 400px;
     height: 400px;
-    border: solid 1px black; 
+    box-shadow: 0px 0px 5px 5px #383737;
+
 }
 
 #footer-section{
     background-color: rgb(44, 42, 42);
     color: white;
+    margin-top: 10px;
 }
 .footer-text{
     padding-bottom: 20px;
