--- a/Restaurant.css
+++ b/Restaurant.css
@@ -18,7 +18,7 @@
     border: solid 1px black;
 }
 
-.menu, .contact, .gallary, .logo{
+.menu, .sales, .gallary, .logo{
     padding-right: 100px;
 }
 
@@ -96,6 +96,7 @@ a:visited{
     .hero-section,
     .restaurant{
         width: 100%;
+        height: 100%;
         background-color: aqua;
     }
 }
