--- a/Restaurant.css
+++ b/Restaurant.css
@@ -25,9 +25,13 @@
 #second-section{ 
     margin-top: 10px;
     margin-bottom: 10px;
-    height: 500px;
-    width: 100%;
     box-shadow: 0px 0px 5px 5px #383737;
+}
+
+/* THIS AFFECYS THE RESTAURANT PLACEHOLDER  */
+.front{
+    height: 500px; 
+    width: 100%;
 }
 
 p, h4{
@@ -82,16 +86,19 @@ p, h4{
     padding-right: 100px;
 }
 
-.front{
-    height: 500px; 
-    width: 1331px; 
-}
 
+/* Pseudo links */
 a:link{
     color: black;
 }
 a:visited{
     color: black;
+}
+a:hover{
+    color: white;
+}
+a:active{
+    color: white;
 }
 
 
