--- a/Restaurant.css
+++ b/Restaurant.css
@@ -60,6 +60,7 @@ p, h4{
     background-color: rgb(44, 42, 42);
     color: white;
     margin-top: 10px;
+    margin-bottom: auto;
 }
 .footer-text{
     padding-bottom: 20px;
@@ -87,7 +88,7 @@ p, h4{
 }
 
 
-/* Pseudo links */
+
 a:link{
     color: black;
 }
@@ -103,20 +104,17 @@ a:active{
 
 
 
-/* TODO: Remove the colours of the widths */ 
 @media only screen and (max-width: 600px)  and (orientation: landscape) {
     .hero-section,
     .restaurant{
         width: 100%;
         height: 100%;
-        background-color: aqua;
     }
 }
 @media only screen and (max-width: 600px)  and (orientation: portrait) {
     .hero-section,
     .restaurant{
         width: 100%;
-        background-color: rgba(0, 255, 255, 0.781);
     }
 }
 
@@ -124,14 +122,12 @@ a:active{
     .hero-section,
     .restaurant{
         width: 100%;
-        background-color: orange;
     }
 }
 @media only screen and (min-width: 601px)  and (orientation: portrait) {
     .hero-section,
     .restaurant{
         width: 100%;
-        background-color: rgba(255, 166, 0, 0.836);
     }
 }
 
@@ -139,14 +135,12 @@ a:active{
     .hero-section,
     .restaurant{
         width: 100%;
-        background-color: pink;
     }
 }
 @media only screen and (min-width: 768px)  and (orientation: portrait) {
     .hero-section,
     .restaurant{
         width: 100%;
-        background-color: rgba(255, 192, 203, 0.699);
     }
 }
 
@@ -154,13 +148,11 @@ a:active{
     .hero-section,
     .restaurant{
         width: 100%;
-        background-color: purple;
     }
 }
 @media only screen and (min-width: 992px)  and (orientation: portrait) {
     .hero-section,
     .restaurant{
         width: 100%;
-        background-color: rgba(128, 0, 128, 0.808);
     }
 }
