--- a/Restaurant.css
+++ b/Restaurant.css
@@ -5,14 +5,18 @@ body{
 
 .restaurant{
     width: 100%; 
-    padding: 100px 0;
-    margin: 0 auto;
 }
 
-/* .hero-section{
-    display: flex;
-    margin: 0 10px;
-} */
+.logo-placement{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 10%;
+}
+#logo{
+    width: 100px; 
+    height: 100px;
+}
 
 nav{
     background-color: rgb(44, 42, 42);
@@ -56,7 +60,7 @@ nav ul li a{
     box-shadow: 0px 0px 5px 5px #383737;
 }
 
-/* THIS AFFECYS THE RESTAURANT PLACEHOLDER  */
+/* THIS AFFECTS THE RESTAURANT PLACEHOLDER  */
 .front{
     height: 500px; 
     width: 100%;
@@ -68,6 +72,12 @@ p, h4{
     padding: 10px;
     word-wrap: normal;
     /* text-wrap: wrap; */
+}
+#third-section{
+    background-color: rgb(44, 42, 42);
+    color: white;
+    margin-top: 10px;
+    margin-bottom: auto;
 }
 
 #tryout{ /* center this */ 
@@ -118,16 +128,16 @@ p, h4{
 
 
 a:link{
-    color: black;
+    color: white;
 }
 a:visited{
-    color: black;
+    color: white;
 }
 a:hover{
-    color: white;
+    color: black;
 }
 a:active{
-    color: white;
+    color: black;
 }
 
 
