--- a/menu.css
+++ b/menu.css
@@ -1,10 +1,123 @@
-.menu{
-    border: 2px solid red;
-    width: 60%;
-    height: fit-content;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+body{
+    font-family: "Poppins", sans-serif;
+    font-size: 16px;
+    line-height: 22px;
+    color: #222;
+}
+
+.main {
+    width: 1170px;
+    margin: 100px auto;
+}
+
+.section-title {
+    text-align: center;
+    margin-bottom: 80px;
+}
+
+.section-title h2 {
+    text-transform: capitalize;
+    font-size: 35px;
+    position: relative;
+    display: inline-block;
+    padding-bottom: 20px;
+    margin-bottom: 10px;
+}
+
+.section-title h2:before {
+    content: '';
+    position: absolute;
+    width: 60px;
+    height: 3px;
+    background-color: #00875c;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+
+.main {
+    width: 1170px;
+    margin: 100px auto;
+}
+
+.section-title {
+    text-align: center;
+    margin-bottom: 80px;
+}
+
+.section-title h2 {
+    text-transform: capitalize;
+    font-size: 35px;
+    position: relative;
+    display: inline-block;
+    padding-bottom: 20px;
+    margin-bottom: 10px;
+}
+
+.section-title h2:before {
+    content: '';
+    position: absolute;
+    width: 60px;
+    height: 3px;
+    background-color: #00875c;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.menus {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.menu-colum {
+    width: 31%;
+}
+
+.menu-colum h4 {
+    text-transform: capitalize;
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 20px;
+    position: relative;
+    padding-bottom: 10px;
+}
+
+.menu-colum h4:before {}
+
+.single-menu {display: flex;align-items: center;margin-top: 40px;}
+
+.single-menu img {
+    border-radius: 50%;
+    max-width: 119px;
+    border: 1px dashed #ddd;
+    padding: 3px;
+    margin-right: 15px;
+}
+
+.single-menu .menu-content h5 {
+    text-transform: capitalize;
+    font-size: 22px;
+    font-weight: 500;
+    border-bottom: 1px dashed #222;
+    border-bottom: 5px;
+    margin-bottom: 10px;
+}
+
+.single-menu .menu-content h5 span {
+    color: tomato;
+    float: right;
+    font-weight: 600;
+    font-style: italic;
 }
 
 
@@ -12,9 +125,7 @@
 
 
 
-
-
-
+/* 
 @media only screen and (max-width: 600px)  and (orientation: landscape) {
     .hero-section,
     .restaurant{
@@ -79,4 +190,4 @@
     .restaurant{
         width: 100%;
     }
-}
+} */
