--- a/menu.css
+++ b/menu.css
@@ -114,7 +114,7 @@ body{
 }
 
 .single-menu .menu-content h5 span {
-    color: tomato;
+    color: #00875c;
     float: right;
     font-weight: 600;
     font-style: italic;
