--- a/Restaurant.css
+++ b/Restaurant.css
@@ -14,7 +14,7 @@
 }
 
 nav{
-    background-color: rgb(44, 42, 42);
+    background-color: #00875c;
     padding: 1rem; 
 }
 nav ul{
@@ -69,7 +69,7 @@ p, h4{
     /* text-wrap: wrap; */
 }
 #third-section{
-    background-color: rgb(44, 42, 42);
+    background-color: #00875c;
     color: white;
     margin-top: 10px;
     margin-bottom: auto;
@@ -90,7 +90,7 @@ p, h4{
 }
 
 #footer-section{
-    background-color: rgb(44, 42, 42);
+    background-color: #00875c;
     color: white;
     margin-top: 10px;
     margin-bottom: auto;
